--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </nav>
         </header>
         <main>
-            <h1>Sameul Halling | WDD 130</h1>
+            <h1>Samuel Halling | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Samuel Halling" width="200">
             <p>Hello! My name is Sam, I'm from Texas and i play way too many video games, and I love candy.</p>
         </main>
