--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Samuel Halling | WDD 130</title>
+        <meta name="description" content="Sam, WDD 130, My home page will be used to explore web design and further learn coding and programming.">
+        <meta name="author" content="Sam Halling">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -17,6 +20,11 @@
             <img src="images/profile.jpg" alt="Hello, my name is Samuel Halling" width="200">
             <p>Hello! My name is Sam, I'm from Texas and i play way too many video games, and I love candy.</p>
         </main>
+        <aside>
+            <h2>Texas, United States</h2>
+            <img src="images/texas.jpg" alt="Texas map">
+            <p>Texas is the 2nd largest state in the US. It's really hot, and im not a huge fan of that personally. Winters only exist for around one month before we experience the walking infernos again, but on days it's pretty cold weather, it is pretty cool state to be in. </p>
+        </aside>
         <footer>
             <p>©️2025 🐳 Samuel Halling 🐳 Austin, Texas</p>
         </footer>
