--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,8 +9,27 @@
     </head>
     <body>
         <header>
+            <img src="images/z-dryoarlogo.png">
+            <nav>
+                <a href="index.html"></a>
+                <a href="about.html"></a>
+                <a href="trips.html"></a>
+                <a href="contact.html"></a>
+            </nav>
         </header>
         <main>
+            <div>
+                <img src="images/rafting16_1024.jpg" alt="le backround!">
+                <h1>Dry Oar</h1>
+                <article>
+                    <img src="images/COLOURBOX64529981.webp" alt="I AM A VERY HAPPY PERON!!!!">
+                    <p>Dry Oar rafting has been throwing people into rivers since 1760!!! Super fun!!!</p>
+                </article>
+            </div>
+            <section>
+                <h2>History</h2>
+                <p></p>
+            </section>
         </main>
         <footer>
         </footer>
