--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,10 @@
             </div>
             <section>
                 <h2>History</h2>
-                <p></p>
+                <p>we should definitely thorw more people in rivers.</p>
+            </section>
+            <section>
+                
             </section>
         </main>
         <footer>
