--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,7 +31,9 @@
                 <p>we should definitely thorw more people in rivers.</p>
             </section>
             <section>
-                
+                <h2>Adventure Awaits You!</h2>
+                <img src="images/raft1.jpg">
+                <img src="images/raft2.jpg">
             </section>
         </main>
         <footer>
