--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,6 +34,9 @@
                 <h2>Adventure Awaits You!</h2>
                 <img src="images/raft1.jpg">
                 <img src="images/raft2.jpg">
+                <img src="images/raft3.jpg">
+                <img src="images/raft4.jpg">
+                <img src="images/raft5.jpg">
             </section>
         </main>
         <footer>
