--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style/rafting.css">
     </head>
     <body>
         <header>
@@ -40,6 +41,18 @@
             </section>
         </main>
         <footer>
+            <p>©️2025, Dry Oar, Samuel Halling</p>
+            <nav class="sociallinks">
+                <a href="https://twitter.com">
+                    <img src="images/104501_twitter_bird_icon.svg" alt="Twitter">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/1161953_instagram_icon.svg" alt="Instagram">
+                </a>
+                <a href="https://facebook.com">
+                    <img src="images/104498_facebook_icon.svg" alt="Facebook">
+                </a>
+            </nav>
         </footer>
     </body>
 </html>
