--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style/rafting.css">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <main>
-            <div>
+            <div class="hero">
                 <img src="images/rafting16_1024.jpg" alt="le backround!">
                 <h1>Dry Oar</h1>
                 <article>
