--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,6 +22,11 @@
             <div class="hero">
                 <img src="images/rafting16_1024.jpg" alt="le backround!">
                 <h1>Dry Oar</h1>
+                <div class="flex-container">
+                    <div class="flex-item item1">Item 1</div>
+                    <div class="flex-item item2">Item 2</div>
+                    <div class="flex-item item3">Item 3</div>
+                </div>
                 <article>
                     <img src="images/COLOURBOX64529981.webp" alt="I AM A VERY HAPPY PERON!!!!">
                     <p>Dry Oar rafting has been throwing people into rivers since 1760!!! Super fun!!!</p>
