--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,30 +12,28 @@
         <header>
             <img src="images/z-dryoarlogo.png">
             <nav>
-                <a href="index.html"></a>
-                <a href="about.html"></a>
-                <a href="trips.html"></a>
-                <a href="contact.html"></a>
+                <a href="index.html">Item 1</a>
+                <a href="about.html">Item 2</a>
+                <a href="trips.html">Item 3</a>
+                <a href="contact.html">Item 4</a>
             </nav>
         </header>
-        <main>
+        <main class=".flex.container">
             <div class="hero">
                 <img src="images/rafting16_1024.jpg" alt="le backround!">
-                <h1>Dry Oar</h1>
-                <div class="flex-container">
-                    <div class="flex-item item1">Item 1</div>
-                    <div class="flex-item item2">Item 2</div>
-                    <div class="flex-item item3">Item 3</div>
-                </div>
+                <h1>Dry Oar</h1> 
+                <!-- This is the title -->
                 <article>
                     <img src="images/COLOURBOX64529981.webp" alt="I AM A VERY HAPPY PERON!!!!">
                     <p>Dry Oar rafting has been throwing people into rivers since 1760!!! Super fun!!!</p>
                 </article>
             </div>
+
             <section>
                 <h2>History</h2>
-                <p>we should definitely thorw more people in rivers.</p>
+                <p>Splashing in the sun.</p>
             </section>
+
             <section>
                 <h2>Adventure Awaits You!</h2>
                 <img src="images/raft1.jpg">
@@ -47,7 +45,7 @@
         </main>
         <footer>
             <p>©️2025, Dry Oar, Samuel Halling</p>
-            <nav class="sociallinks">
+            <div class="sociallinks">
                 <a href="https://twitter.com">
                     <img src="images/104501_twitter_bird_icon.svg" alt="Twitter">
                 </a>
@@ -57,7 +55,7 @@
                 <a href="https://facebook.com">
                     <img src="images/104498_facebook_icon.svg" alt="Facebook">
                 </a>
-            </nav>
+            </div>
         </footer>
     </body>
 </html>
