--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,17 +44,19 @@
             </section>
         </main>
         <footer>
-            <p>©️2025, Dry Oar, Samuel Halling</p>
-            <div class="sociallinks">
-                <a href="https://twitter.com">
+            <div>
+                <p class="copyright">©️2025, Dry Oar, Samuel Halling</p>
+                <div class="sociallinks">
+                    <a href="https://twitter.com">
                     <img src="images/104501_twitter_bird_icon.svg" alt="Twitter">
-                </a>
-                <a href="https://instagram.com">
-                    <img src="images/1161953_instagram_icon.svg" alt="Instagram">
-                </a>
-                <a href="https://facebook.com">
+                    </a>
+                    <a href="https://instagram.com">
+                    <img class="resize" src="images/1161953_instagram_icon.svg" alt="Instagram">
+                    </a>
+                    <a href="https://facebook.com">
                     <img src="images/104498_facebook_icon.svg" alt="Facebook">
-                </a>
+                    </a>
+                </div>
             </div>
         </footer>
     </body>
