--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,16 +11,16 @@
     <body>
         <header>
             <img src="images/z-dryoarlogo.png">
-            <nav>
-                <a href="index.html">Item 1</a>
-                <a href="about.html">Item 2</a>
-                <a href="trips.html">Item 3</a>
-                <a href="contact.html">Item 4</a>
+            <nav class="links">
+                <a href="index.html">Index</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <main class=".flex.container">
             <div class="hero">
-                <img src="images/rafting16_1024.jpg" alt="le backround!">
+                <img class=oar src="images/rafting16_1024.jpg" alt="le backround!">
                 <h1>Dry Oar</h1> 
                 <!-- This is the title -->
                 <article>
