--- a/wwr/about.html
+++ b/wwr/about.html
@@ -36,11 +36,13 @@
 
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/raft1.jpg">
-                <img src="images/raft2.jpg">
-                <img src="images/raft3.jpg">
-                <img src="images/raft4.jpg">
-                <img src="images/raft5.jpg">
+                <div class="advent">
+                    <img class="raftsize" src="images/raft1.jpg">
+                    <img class="raftsize" src="images/raft2.jpg">
+                    <img class="raftsize" src="images/raft3.jpg">
+                    <img class="raftsize" src="images/raft4.jpg">
+                    <img class="raftsize" src="images/raft5.jpg">
+                </div>
             </section>
         </main>
         <footer>
